# polyglot-coding-playground

./: .gitignore  README.md
algorithms/computational-geoemtry/convex-hull/: main.py
algorithms/cplusplus/searching/: linearSearch.cpp
algorithms/python/backtracking/: rat_in_a_maze.py  rats_and_mazes.ipynb  travelling_salesman_problem.ipynb
algorithms/python/divide_and_conquer/: lowest_common_ancestor.ipynb
algorithms/python/dynamic_programming/: knapsack_problem.ipynb
algorithms/python/graph/: bfs.ipynb  depth_first_search_for_a_graph.py  minimum_spanning_tree_with_kruskal.py  shortest_path_problem_with_dijkstra.py
algorithms/python/searching/: binary_search.ipynb  linear_search.ipynb
algorithms/python/sorting/: bubble_sort.ipynb  bubble_sort.py  bucket_sort.ipynb  counting_sort.ipynb  counting_sort.py  heap_sort.ipynb  insertion_sort.ipynb  merge_sort.ipynb  quick_sort.ipynb
algorithms/statistical-analysis/bayesian-inference/cpp/: CMakeLists.txt  bayesianInference.cpp  bayesianInference.h  main.cpp
algorithms/statistical-analysis/least-squares-fitting/cpp/: CMakeLists.txt  leastSquaresFitting.cpp  leastSquaresFitting.h  main.cpp
algorithms/zig/divide_and_conquer/: lowest_common_ancestor.zig
algorithms/zig/graph/: breadth_first_search.zig  depth_first_search_for_a_graph.zig  shortest_path_problem_with_dijkstra.zig
algorithms/zig/searching/: linear_search.zig
algorithms/zig/sorting/: bucket_sort.zig  counting_sort.zig  insertion_sort.zig  quick_sort.zig
data-structures/: dynamicArray.cpp  singleLinkedList.cpp
data-structures/cplusplus/: disjointSet.cpp  doublyLinkedList.cpp  skipList.cpp
data-structures/disjoint-set/cpp/: DisjointSet.h  disjointSet.cpp  main.cpp
data-structures/disjoint-set/java/: DisjointSet.java  Main.java
data-structures/double-linked-list/cpp/: DoubleLinkedList.cpp  DoubleLinkedList.h  main.cpp  singleLinkedList.cpp
data-structures/dynamic-array/cpp/: DynamicArray.h  dynamicArray.cpp  main.cpp
data-structures/dynamic-array/java/: DynamicArrayList.java  Main.java
data-structures/hash-map/cpp/: HM.cpp  HM.h  main.cpp
data-structures/heap/cpp/: Heap.cpp  Heap.h  main.cpp
data-structures/heap/java/: Heap.java  Main.java
data-structures/lock-free-linked-list/cpp/: LLFL.cpp  LLFL.h  lockFreeLinkedList.cpp  main.cpp
data-structures/lock-free-linked-list/java/: LockFreeLinkedList.java  Main.java
data-structures/user-defined-data-structures-in-python/: example_usages.py
design-patterns/cplusplus/: CMakeLists.txt  README.md  design-patterns.cpp  scratchwork.txt
design-patterns/cplusplus/SingletonPattern/: CMakeLists.txt
(+617 files in other folders)
